# Agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docs/: ARCHITECTURE.md
eval/adk/: README.md  analyst_proxy.test.json  coder_proxy.test.json  researcher_proxy.test.json
guardrails/: prompt_injection.md
init-db/: 01_agent_schema.sql  02_run_trace_column.sql
ocr_input/: .gitignore
scripts/: adk_eval.sh  adk_web.sh
skills/: analyst.md  coder.md  coordinator.md  ocr_agent.md  researcher.md  reviewer.md  writer.md
src/agent_system/: __init__.py  main.py  tracing.py
src/agent_system/adk/: __init__.py  common.py
src/agent_system/adk/analyst_proxy/: agent.py
src/agent_system/adk/analyst_proxy/.adk/: session.db
src/agent_system/adk/coder_proxy/: __init__.py  agent.py
src/agent_system/adk/researcher_proxy/: agent.py
src/agent_system/api/: app.py
src/agent_system/api/middleware/: __init__.py  request_id.py
src/agent_system/api/routes/: __init__.py  agents.py  debug.py  files.py  health.py  review.py
src/agent_system/api/schemas/: __init__.py  agent_schemas.py
src/agent_system/api/security/: __init__.py  api_key.py
src/agent_system/api/static/: human_review.html
src/agent_system/cache/: __init__.py  redis_client.py
src/agent_system/chat/: __init__.py  app.py  chainlit.md  runner.py
src/agent_system/config/: settings.py
src/agent_system/core/: __init__.py  agent.py  checkpointing.py  graph.py  interrupt_registry.py  invoke_tools.py  plugins.py  reflection.py  run_context.py  safety_plugin.py  safety_rule_loader.py  skill_loader.py  trace.py
src/agent_system/database/: pool.py
src/agent_system/logging/: __init__.py  elastic_logger.py
src/agent_system/models/: __init__.py  llm_factory.py
src/agent_system/storage/: __init__.py  agent_config_store.py  caching_run_store.py  minio_client.py  run_store.py  session_paths.py
src/agent_system/tools/: __init__.py  builtin_tools.py  mcp_client.py  registry.py
tests/: test_adk_regression.py  test_api.py  test_builtin_tools.py  test_cache_run_store.py  test_human_approval_routing.py  test_reflection.py  test_session_paths.py  test_settings.py  test_skill_loader.py  test_skill_loader_modes.py  test_tool_registry.py  test_trace.py
(+1 files in other folders)
